# elevator_simulator

./: .gitignore  PROJECT_STRUCTURE.md  README.md  analyze_results.py  benchmark_analysis.py  benchmark_strategies.py  main.py  pyproject.toml  skills_suggestions.md  test_tracking.py
config/: demo_scenarios.json  elevator_config.json
demos/: demo.py  pygame_demo.py
docs/: CONFIG_GUIDE.md  DEPENDENCY_INJECTION.md  DI_ARCHITECTURE.md  DI_COMPLETE.md  DI_IMPLEMENTATION_SUMMARY.md  DI_MIGRATION_GUIDE.md  DI_QUICKSTART.md  DI_README.md  INTERACTIVE_GUIDE.md
examples/: context_manager_usage.py  dependency_injection_demo.py
src/: __init__.py
src/core/: __init__.py  advanced_strategies.py  benchmarking.py  container.py  elevator_simulator.py  event_bus.py  interfaces.py  persistence.py  simulation_engine.py  strategies.py  strategy_factory.py  validated_config.py
src/utils/: __init__.py  config_loader.py  demo_loader.py
src/visualization/: __init__.py  pygame_visualization.py  visualization.py
tests/: README.md  conftest.py  debug_stuck_elevator.py  test_advanced_strategies.py  test_benchmarking.py  test_config_integration.py  test_dependency_injection.py  test_event_bus.py  test_heavy_load.py  test_movement.py  test_persistence.py  test_realistic_visitors.py  test_validated_config.py  verify_structure.py
